// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renders <Signin> correctly 1`] = `
<Styled(MobileContentWrapper)>
  <HelmetWrapper
    encodeSpecialCharacters={true}
  >
    <title>
      signin
    </title>
  </HelmetWrapper>
  <Logo
    alt="MCS Lite Logo"
    src="logo_mcs_lite_black.svg"
  />
  <Styled(Hr)>
    welcome
  </Styled(Hr)>
  <styled.form
    action="/oauth/login/mobile"
    method="post"
  >
    <Input
      focus={false}
      kind="primary"
      name="email"
      onChange={[Function]}
      placeholder="email"
      required={true}
      type="email"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value=""
    />
    <Button
      active={false}
      block={true}
      component="input"
      disabled={false}
      kind="primary"
      round={false}
      size="normal"
      square={false}
      type="submit"
      value="signin"
    />
  </styled.form>
</Styled(MobileContentWrapper)>
`;

exports[`should renders <Signin> correctly with errorMessage 1`] = `
<Styled(MobileContentWrapper)>
  <HelmetWrapper
    encodeSpecialCharacters={true}
  >
    <title>
      signin
    </title>
  </HelmetWrapper>
  <Logo
    alt="MCS Lite Logo"
    src="logo_mcs_lite_black.svg"
  />
  <Styled(P)
    color="error"
  >
    errorMessage
  </Styled(P)>
  <Styled(Hr)>
    welcome
  </Styled(Hr)>
  <styled.form
    action="/oauth/login/mobile"
    method="post"
  >
    <Input
      focus={false}
      kind="primary"
      name="email"
      onChange={[Function]}
      placeholder="email"
      required={true}
      type="email"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value=""
    />
    <Button
      active={false}
      block={true}
      component="input"
      disabled={false}
      kind="primary"
      round={false}
      size="normal"
      square={false}
      type="submit"
      value="signin"
    />
  </styled.form>
</Styled(MobileContentWrapper)>
`;
